--- a/styles/container/components-css/footer.module.css
+++ b/styles/container/components-css/footer.module.css
@@ -1,4 +1,4 @@
-.footer{
+.footer {
     width: 100%;
     height: auto;
     background: var(--light-grey);
@@ -7,12 +7,14 @@
     padding-bottom: 0.5rem;
     box-shadow: -0.3rem 0rem 0.13rem 0.3rem rgb(0 0 0 / 12%);
 }
-.footer_main{
+
+.footer_main {
     display: flex;
     width: 100%;
     height: auto;
 }
-.logo_searchs{
+
+.logo_searchs {
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
@@ -20,7 +22,8 @@
     gap: 1rem;
     flex: 1;
 }
-.logo_searchs figure{
+
+.logo_searchs figure {
     height: 5rem;
     width: 80%;
     background-image: url(../../../public/new\ logo\ 20.svg);
@@ -28,14 +31,16 @@
     background-size: contain;
     background-position: center left;
 }
-.logo_searchs p{
+
+.logo_searchs p {
     font-size: 0.7rem;
     font-family: var(--Roboto);
     letter-spacing: 0.01rem;
     color: var(--black-blue);
     font-weight: 500;
 }
-.logo_searchs span{
+
+.logo_searchs span {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -43,14 +48,16 @@
     border-radius: 0.2rem;
     width: min-content;
 }
-.logo_searchs div{
+
+.logo_searchs div {
     display: flex;
     flex-direction: column;
     gap: 1rem;
     align-items: center;
     justify-content: center;
 }
-.logo_searchs input{
+
+.logo_searchs input {
     font-size: 0.8rem;
     padding: 0.2rem;
     margin-right: 0.2rem;
@@ -59,25 +66,29 @@
     border: none;
     color: var(--black-blue);
 }
-.logo_searchs svg{
+
+.logo_searchs svg {
     color: var(--white);
     padding: 0.35rem;
     height: 1rem;
     width: 1rem;
 }
-.footer_links{
+
+.footer_links {
     flex: 2;
     display: flex;
     align-items: flex-start;
     justify-content: space-around;
     padding-top: 3.5rem;
 }
-.footer_links div{
+
+.footer_links div {
     display: flex;
     flex-direction: column;
     gap: 0.8rem;
 }
-.footer_links div h5{
+
+.footer_links div h5 {
     font-size: 0.9rem;
     font-family: var(--inter);
     margin-bottom: 0.5rem;
@@ -85,7 +96,8 @@
     font-weight: 600;
     letter-spacing: 0.02rem;
 }
-.footer_links div a{
+
+.footer_links div a {
     font-size: 0.8rem;
     text-decoration: none;
     color: var(--light-blue);
@@ -93,7 +105,8 @@
     font-weight: 500;
     letter-spacing: 0.01rem;
 }
-.footer_rights{
+
+.footer_rights {
     margin-top: 4rem;
     border-top: 0.2rem solid var(--red-tomato);
     border-radius: 0.1rem;
@@ -103,45 +116,52 @@
     gap: 0.5rem;
     height: 3rem;
 }
-.footer_rights p{
+
+.footer_rights p {
     color: var(--red-tomato);
     font-family: var(--Roboto);
     font-size: 0.9rem;
     text-transform: capitalize;
 }
-.footer_rights svg{
+
+.footer_rights svg {
     height: 1.5rem;
     width: 1.5rem;
     color: var(--red-tomato);
 }
-.footer_links div a:hover{
+
+.footer_links div a:hover {
     color: var(--red-tomato);
     font-weight: 600;
 }
 
 /* media query */
 @media screen and (max-width: 900px) {
-    .footer_main{
+    .footer_main {
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
     }
-    .footer_links{
+
+    .footer_links {
         width: 100%;
         justify-content: space-around;
         align-items: center;
         gap: 1rem;
         flex-wrap: wrap;
     }
-    .logo_searchs{
+
+    .logo_searchs {
         justify-content: center;
         align-items: flex-start;
         width: 70%;
     }
-    .logo_searchs figure{
+
+    .logo_searchs figure {
         background-position: center center;
     }
-    .logo_searchs div{
+
+    .logo_searchs div {
         display: flex;
         width: 100%;
         justify-content: space-around;
@@ -150,34 +170,44 @@
         flex-direction: row;
     }
 }
+
 @media screen and (max-width: 500px) {
-.footer_links{
-    flex-direction: column;
-    gap: 3rem;
+    .footer_links {
+        flex-direction: column;
+        gap: 3rem;
+    }
+
+    .footer_links div {
+        align-items: center;
+    }
 }
-}
+
 @media screen and (min-height: 1350px) {
-    .footer_main{
+    .footer_main {
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
     }
-    .footer_links{
+
+    .footer_links {
         width: 100%;
         justify-content: space-around;
         align-items: center;
         gap: 1rem;
         flex-wrap: wrap;
     }
-    .logo_searchs{
+
+    .logo_searchs {
         justify-content: center;
         align-items: flex-start;
         width: 70%;
     }
-    .logo_searchs figure{
+
+    .logo_searchs figure {
         background-position: center center;
     }
-    .logo_searchs div{
+
+    .logo_searchs div {
         display: flex;
         width: 100%;
         justify-content: space-around;
