--- a/styles/container/profile-page-css/components/person_info.module.css
+++ b/styles/container/profile-page-css/components/person_info.module.css
@@ -64,6 +64,11 @@
     color: var(--black-blue);
     font-weight: 500;
 }
+.only_num::-webkit-outer-spin-button,
+.only_num::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
 
 /* media query */
 @media screen and (max-width: 900px){
