--- a/styles/container/components-css/filter.module.css
+++ b/styles/container/components-css/filter.module.css
@@ -9,6 +9,7 @@
     box-shadow: 0rem 0rem 1rem 0rem rgb(0 0 0 / 12%);
     transition-duration: 1s;
     left: -100vw;
+    z-index: 18;
 }
 
 .filter_main {
@@ -44,7 +45,6 @@
     color: var(--white);
     box-shadow: 0rem 0rem 1rem 0rem rgb(0 0 0 / 12%);
     margin-top: 0.5rem;
-    display: none;
 }
 
 .gender_tab {
