--- a/styles/container/components-css/footer.module.css
+++ b/styles/container/components-css/footer.module.css
@@ -25,8 +25,8 @@
 
 .logo_searchs figure {
     height: 5rem;
-    width: 80%;
-    background-image: url(../../../public/new\ logo\ 20.svg);
+    width: 70%;
+    background-image: url(../../../public//image\ 5.svg);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center left;
