--- a/styles/container/components-css/navbar.module.css
+++ b/styles/container/components-css/navbar.module.css
@@ -5,7 +5,7 @@
     background: var(--light-grey);
     padding: var(--margin);
     display: flex;
-    z-index: 1;
+    z-index: 19;
     align-items: center;
     box-shadow: 0.3rem 0rem 0.13rem 0.3rem rgb(0 0 0 / 12%);
     transition-duration: 0.5s;
@@ -15,7 +15,7 @@
     height: 3rem;
     width: 7rem;
     margin: 0.5rem 0rem;
-    background-image: url(../../../public//new\ logo\ 20.svg);
+    background-image: url(../../../public//image\ 5.svg);
     background-size: contain;
     background-position: center left;
     background-repeat: no-repeat;
