--- a/styles/container/home-page-css/components/porposal.module.css
+++ b/styles/container/home-page-css/components/porposal.module.css
@@ -9,7 +9,7 @@
 .proposal figure {
     width: 100%;
     height: 7rem;
-    background-image: url(https://images.unsplash.com/photo-1603415526960-f7e0328c63b1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
+    background-image: url(https://www.pngitem.com/pimgs/m/35-350426_profile-icon-png-default-profile-picture-png-transparent.png);
     background-position: center center !important;
     background-repeat: no-repeat !important;
     background-size: cover !important;
@@ -20,9 +20,16 @@
     box-shadow: inset 0rem 0rem 0.4rem 0rem hsl(0deg 0% 0% / 50%);
 }
 
+.proposal figure img{
+    border-radius: 0.5rem 0.5rem 0rem 0rem;
+    box-shadow: inset 0rem 0rem 0.4rem 0rem hsl(0deg 0% 0% / 50%);
+}
+
 .img_top {
+    z-index: 1;
+    position: absolute;
     background: rgb(0 0 0 / 25%);
-    width: 100%;
+    width: 11rem;
     display: flex;
     align-items: center;
     border-radius: 0.5rem 0.5rem 0rem 0rem;
@@ -68,8 +75,11 @@
 }
 
 .image_changer {
+    margin-top: 5.8rem;
+    z-index: 1;
+    position: absolute;
     height: 1.2rem;
-    width: 100%;
+    width: 11rem;
     display: flex;
     align-items: center;
     justify-content: center;
